<resources>
    <string name="app_name">LabNikitaPulin</string>
    <string name="email_text">Email</string>
    <string name="email_hint_text">admin@admin.ru</string>
    <string name="password_text">Password</string>
    <string name="password_hint_text">123</string>
    <string name="button_text">Войти</string>
    <string name="send_button_text">Отправить</string>
    <string name="greeting_text">Данные верны</string>
    <string name="wrong_greeting_text">Данные не верны</string>
    <string name="back_button_text">Назад</string>
</resources>